{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 102,
  "lineage": "e801bfd9-d51b-37b8-f8ca-75ddc30be73c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cp_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0589fbac628f1e541",
            "association_id": "eipassoc-0441d963676840003",
            "domain": "vpc",
            "id": "eipalloc-0589fbac628f1e541",
            "instance": "i-00e8a85822b1e1beb",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0642208b8f8f5ce11",
            "private_dns": "ip-10-0-10-55.eu-west-2.compute.internal",
            "private_ip": "10.0.10.55",
            "public_dns": "ec2-18-133-58-71.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.58.71",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ec2_instance.aws_spot_instance_request.this",
            "aws_iam_instance_profile.Kube_S3_profile",
            "aws_iam_role.CP_IAM_S3",
            "data.aws_ami.ubuntu",
            "module.K8_VPC.aws_subnet.subnets",
            "module.K8_VPC.aws_vpc.vpc_module",
            "module.ec2_instance.aws_instance.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:877191295427:internet-gateway/igw-014ff53e9987b29f3",
            "id": "igw-014ff53e9987b29f3",
            "owner_id": "877191295427",
            "tags": {
              "Terraform": "true"
            },
            "tags_all": {
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e08e36d4303bc3d8"
          },
          "dependencies": [
            "module.K8_VPC.aws_vpc.vpc_module"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:877191295427:route-table/rtb-0899a8f450d70ea05",
            "id": "rtb-0899a8f450d70ea05",
            "owner_id": "877191295427",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014ff53e9987b29f3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e08e36d4303bc3d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.K8_VPC.aws_vpc.vpc_module",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c01e05cc3408fbd",
            "route_table_id": "rtb-0899a8f450d70ea05",
            "subnet_id": "subnet-065f4af76c408b228"
          },
          "dependencies": [
            "module.K8_VPC.aws_subnet.subnets",
            "module.K8_VPC.aws_vpc.vpc_module",
            "aws_internet_gateway.igw",
            "aws_route_table.igw_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "home_net_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "80.44.0.0/16"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3242415485",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-025a637ab44bee438",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.K8_VPC.aws_vpc.vpc_module"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "local_net_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3596030446",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-025a637ab44bee438",
            "self": true,
            "source_security_group_id": "sg-025a637ab44bee438",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.K8_VPC.aws_vpc.vpc_module"
          ]
        }
      ]
    },
    {
      "module": "module.K8_VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:877191295427:subnet/subnet-065f4af76c408b228",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.10.0/26",
            "id": "subnet-065f4af76c408b228",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "877191295427",
            "tags": {
              "Name": "kubenet-0",
              "Terraform": "true",
              "project": "Simple K8 playground"
            },
            "tags_all": {
              "Name": "kubenet-0",
              "Terraform": "true",
              "project": "Simple K8 playground"
            },
            "vpc_id": "vpc-0e08e36d4303bc3d8"
          },
          "dependencies": [
            "module.K8_VPC.aws_vpc.vpc_module"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:877191295427:subnet/subnet-0d12d6797dcf5180b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.10.64/26",
            "id": "subnet-0d12d6797dcf5180b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "877191295427",
            "tags": {
              "Name": "kubenet-1",
              "Terraform": "true",
              "project": "Simple K8 playground"
            },
            "tags_all": {
              "Name": "kubenet-1",
              "Terraform": "true",
              "project": "Simple K8 playground"
            },
            "vpc_id": "vpc-0e08e36d4303bc3d8"
          },
          "dependencies": [
            "module.K8_VPC.aws_vpc.vpc_module"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:877191295427:subnet/subnet-0d032d17bb91c1818",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.10.128/26",
            "id": "subnet-0d032d17bb91c1818",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "877191295427",
            "tags": {
              "Name": "kubenet-2",
              "Terraform": "true",
              "project": "Simple K8 playground"
            },
            "tags_all": {
              "Name": "kubenet-2",
              "Terraform": "true",
              "project": "Simple K8 playground"
            },
            "vpc_id": "vpc-0e08e36d4303bc3d8"
          },
          "dependencies": [
            "module.K8_VPC.aws_vpc.vpc_module"
          ]
        }
      ]
    },
    {
      "module": "module.K8_VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_module",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:877191295427:vpc/vpc-0e08e36d4303bc3d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.10.0/24",
            "default_network_acl_id": "acl-03044ab21ed6c6967",
            "default_route_table_id": "rtb-03fd7360986baf622",
            "default_security_group_id": "sg-025a637ab44bee438",
            "dhcp_options_id": "dopt-05946e5810989c7d3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e08e36d4303bc3d8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03fd7360986baf622",
            "owner_id": "877191295427",
            "tags": {
              "Name": "kubenet",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "kubenet",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fdf70ed5c34c5f52",
            "arn": "arn:aws:ec2:eu-west-2:877191295427:instance/i-00e8a85822b1e1beb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Kube_S3_profile",
            "id": "i-00e8a85822b1e1beb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0642208b8f8f5ce11",
            "private_dns": "ip-10-0-10-55.eu-west-2.compute.internal",
            "private_ip": "10.0.10.55",
            "public_ip": "18.133.58.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03474ed76cafaad12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065f4af76c408b228",
            "tags": {
              "Name": "CP1",
              "Project": "Simple K8 playground",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "CP1",
              "Project": "Simple K8 playground",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "CP1"
            },
            "vpc_security_group_ids": [
              "sg-025a637ab44bee438"
            ]
          },
          "dependencies": [
            "module.K8_VPC.aws_vpc.vpc_module",
            "aws_iam_instance_profile.Kube_S3_profile",
            "aws_iam_role.CP_IAM_S3",
            "data.aws_ami.ubuntu",
            "module.K8_VPC.aws_subnet.subnets"
          ]
        }
      ]
    }
  ]
}